# PupilLIMLab

./: README.md  bunnyMP4VideoData_vwrite_ffmpeg.yuv  config  index  packed-refs  pyproject.toml  raw_ffmpeg.raw  setup.py
.github/workflows/: publish.yml
PupilProcessing/: __init__.py  psychophysicsUtils.py  pupilpipeline.py  utils.py
PupilSense/: __init__.py  extract_pupil_pupil_sense.py  inference_pupil_sense.py
Pupil_LIMlab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
configs/: ephys_2401.yaml  ephys_2504.yaml  human_fam_conf.yaml  human_normdev_conf.yaml  musc_2406.yaml  musc_may23.yaml  musc_sept23.yaml  opto_2503_w_pupilsense.yaml  opto_2602.yaml
example/: run_script.py
logs/refs/heads/: main
logs/refs/remotes/origin/: HEAD
refs/tags/: v1.0.4
tests/: conftest.py  test_core.py
