[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Pupil_LIMlab" # Must be unique on PyPI
version = "1.0.5.1"
description = "A pupil analysis and inference toolkit"
readme = "README.md"
authors = [{name = "Dammy", email = "a.aonih@ucl.ac.uk"}]
dependencies = [
    "numpy < 2.0.0", 
    "pandas", 
    "scipy", 
    "pyyaml", 
    "tqdm", 
    "XdetectionCore>=0.1.7.3",
    "pytest"
]
