[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Pupil_LIMlab" # Must be unique on PyPI
version = "1.0.5.5"
description = "A pupil analysis and inference toolkit"
readme = "README.md"
authors = [{name = "Dammy", email = "a.aonih@ucl.ac.uk"}]
requires-python = ">=3.10"
dependencies = [
    "numpy < 2.0.0", 
    "matplotlib",
    "pandas", 
    "scipy<1.13", 
    "pyyaml", 
    "tqdm", 
    "XdetectionCore>=0.1.7.3",
    "pytest",
    "loguru",
    "rich",
    "opencv-python",
    "pyinspect==0.1.0",
    "cloudpickle",
    "fvcore",
    "omegaconf",
    "pycocotools",
    "python-dotenv",
    "imageio[ffmpeg]",
    "scikit-learn",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
# This tells pytest NOT to look inside your dependency folders
norecursedirs = ["build", "dist"]
pythonpath = ["."]